# mlata

./: README.md
project/: A11.txt  A8.txt  CMakeLists.txt  aks.cpp  aks1.txt  aks2.txt  aks3.txt  all  all.cpp  ask  deduction.txt  formula.txt  input.txt  log.txt  prog  result.txt  task  task1.cpp  task2.cpp  task2_main.txt  test  test1.cpp
project/includes/: Aksiomes.hpp  And.hpp  Complex_constructive_dilemma.hpp  Complex_destructive_dilemma.hpp  Constructor.hpp  Disjunctive_syllogism.hpp  Disjunctive_syllogism_xor.hpp  Equivalence.hpp  Formula.hpp  Hypothetical_syllogism.hpp  Implies.hpp  Modes_ponens.hpp  Modes_tollens.hpp  New_aks.hpp  Not.hpp  Or.hpp  Simple_constructive_dilemma.hpp  Simple_destructive_dilemma.hpp  Variable.hpp  Xor.hpp
project/src/: Aksiomes.cpp  Complex_constructive_dilemma.cpp  Complex_destructive_dilemma.cpp  Constructor.cpp  Disjunctive_syllogism.cpp  Disjunctive_syllogism_xor.cpp  Hypothetical_syllogism.cpp  Modes_ponens.cpp  Modes_tollens.cpp  New_aks.cpp  Simple_constructive_dilemma.cpp  Simple_destructive_dilemma.cpp
